Added massage on the index file

--- a/views/pages/index.htm
+++ b/views/pages/index.htm
@@ -26,7 +26,10 @@
   </div>
 </nav>
 <div class="container-fluid">
-
+<h1>Verion 1.0 ( 15-May-2017)</h1>
+ <div><p>This is a sample NODE JS application , using Express framework and REST API  (Salesforce). Use the Password with your security token to avoide failures. Added only Account object for reference.
+ You can create record using just Account Name and Phone number. There is no validations and no error handling as of now. If there are any errors you will not be able to see it on the UI.
+ </p></div>
 </div>
  
       
