--- a/views/pages/index.htm
+++ b/views/pages/index.htm
@@ -15,12 +15,12 @@
       <a class="navbar-brand" href="#">NODE FORCE</a>
     </div>
     <ul class="nav navbar-nav">
-      <li class="active"><a href="/">Home</a></li>
+     <!-- <li class="active"><a href="/">Home</a></li> -->
       <li><a href="#"></a></li>
       <li><a href="#"></a></li>
     </ul>
     <ul class="nav navbar-nav navbar-right">
-      <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+      <!-- <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>  -->
       <li><a href="/login"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
     </ul>
   </div>
