--- a/views/pages/contacts.ejs
+++ b/views/pages/contacts.ejs
@@ -32,12 +32,12 @@
 </nav>
 <script>
 function redirecttocreate(){
-window.location="/createaccountpage";
+window.location="/createcontactpage";
 }
 
 </script>
 <div class="container-fluid">
-<h2>Accounts records</h2>
+<h2>Contact records</h2>
 	<div class="table-responsive">
   <table class="table">
 
@@ -53,7 +53,7 @@ window.location="/createaccountpage";
 	
 	  </table>
 </div>
-<button type="button" class="btn btn-primary" onClick="redirecttocreate();">Create Account</button>
+<button type="button" class="btn btn-primary" onClick="redirecttocreate();">Create Contact</button>
 </div>
 
 </body>
